# aes70-esp-idf

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml
components/aes70/: CMakeLists.txt  Kconfig  idf_component.yml
components/aes70/include/: aes70.h  aes70_object.h  aes70_types.h
components/aes70/src/: aes70_classes.c  aes70_device.c  aes70_dsp.c  aes70_grouper.c  aes70_internal.h  aes70_managers.c  aes70_matrix.c  aes70_mdns.c  aes70_object.c  aes70_ocp1.c  aes70_ocp1.h  aes70_subscription.c  aes70_transport.c
components/aes70/test/host/: run.sh  stubs.c  test_aes70.c
components/aes70/test/host/shims/: esp_err.h  esp_log.h  esp_timer.h  sdkconfig.h
components/aes70/test/host/shims/freertos/: FreeRTOS.h  queue.h  semphr.h  task.h
components/aes70/test/host/shims/lwip/: sockets.h
examples/p4_nano_dsp/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32p4
examples/p4_nano_dsp/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
tools/: ocp1_smoketest.py
